--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+/config/credentials/development.key
+
+/config/credentials/test.key
